REGRESSION(r276882): Style not invalidated correctly for media queries in shadow trees that share style https://bugs.webkit.org/show_bug.cgi?id=226369 <rdar://problem/78684562>

Reviewed by Sam Weinig.

Source/WebCore:

Style resolvers are stateful in respect to media queries. We would only invalidate in the first shadow tree
because that evaluation flipped the state and the second evaluation would see nothing changing in media query
state.

* style/StyleScope.cpp:
(WebCore::Style::Scope::collectResolverScopes):

Add a helper to collect all scopes associated with a resolver.

(WebCore::Style::Scope::evaluateMediaQueries):

Only evaluate each resolver once, then invalidate all associated scopes if needed.

* style/StyleScope.h:

LayoutTests:

Expand the existing test to have multiple shadow trees sharing style.

* fast/shadow-dom/media-query-in-shadow-style-expected.html:
* fast/shadow-dom/media-query-in-shadow-style.html:
* fast/shadow-dom/resources/media-query-in-shadow-style-frame.html:


Canonical link: https://commits.webkit.org/238378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278346 268f45cc-cd09-0410-ab3c-d52691b4dbfc